[package]
name = "theralib-connect"
version = "0.1.0"
authors = ["KlexHub UG (haftungsbeschränkt) <info@klexhub.com>","Johannes Waigel <johannes@waigel.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcsc = "2"
byteorder= "1.3.4"