[package]
name = "healthcard_rust"
description = "Read data from German public health insurance cards (Elektronische Gesundheitskarte eGK)"
version = "0.1.0"
authors = ["KlexHub UG (haftungsbeschränkt) <info@klexhub.com>","Johannes Waigel <johannes@waigel.me>"]
edition = "2018"
license= "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#pscs_scan
[dependencies]
pcsc = "2"
flate2 = "1.0"
libz-sys = "1.1.2"
xpath_reader = "0.5.3"
serde_json = "1.0"